--- a/FlightFinder.Client/Main.cshtml
+++ b/FlightFinder.Client/Main.cshtml
@@ -1,7 +1,10 @@
 ﻿@inject AppState state
 
+
+
+
 <div id="search-and-results-area">
-    <div id="search-area" class="px-2 py-3">
+    <div id="search-area" class="">
         <Search OnSearch=state.Search />
     </div>
     <div id="results-area">
@@ -11,10 +14,10 @@
         </GreyOutZone>
     </div>
 </div>
-<div id="selections-area" class="p-3 pl-4">
+@*<div id="selections-area" class="p-3 pl-4">
     <Shortlist Itineraries=state.Shortlist
                OnRemoveItinerary=state.RemoveFromShortlist />
-</div>
+</div>*@
 
 @functions
 {
