--- a/FlightFinder.Client/Components/Search.cshtml
+++ b/FlightFinder.Client/Components/Search.cshtml
@@ -1,6 +1,22 @@
 ﻿<div class="col">
+    <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">
+            <div class="input-group">
+                <div class="input-group-btn search-panel">
 
-    
+                    <input list="filters" placeholder="..." @bind(filterTobeAdded) />
+                    <br />
+                  <span>@filterTobeAdded?.DisplayName</span>
+                </div>
+                <input type="hidden" name="search_param" value="all" id="search_param">
+                <input type="text" class="form-control" name="x" placeholder="Search term...">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-plus"></span></button>
+                </span>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Airport selection -->
     <div class="row py-1">
@@ -66,4 +82,6 @@
     public Func<SearchCriteria, Task> OnSearch { get; set; }
 
     private SearchCriteria criteria = new SearchCriteria("LHR", "SEA");
+
+    private Filter filterTobeAdded = new Filter() { Code = "", DisplayName = "Not Set" };
 }
