updates to search filter

--- a/FlightFinder.Client/Components/FiltersList.cshtml
+++ b/FlightFinder.Client/Components/FiltersList.cshtml
@@ -3,7 +3,7 @@
 <datalist id="filters">
     @foreach (var filter in filters)
     {
-        <option value=@filter.Code>@filter.DisplayName (@filter.Code)</option>
+        <option value=@filter.Code>@filter.DisplayName</option>
     }
 </datalist>
 
