--- a/FlightFinder.Client/Components/Search.cshtml
+++ b/FlightFinder.Client/Components/Search.cshtml
@@ -1,12 +1,11 @@
-﻿<div class="col">
+﻿    
+
+<div class="col">
     <div class="row">
         <div class="col-xs-8 col-xs-offset-2">
             <div class="input-group">
                 <div class="input-group-btn search-panel">
 
-                    <input list="filters" placeholder="..." @bind(selectedFilter.Code) />
-                    <br />
-               @*   <span>@selectedFilter?.DisplayName ?? not set</span>*@
                 </div>
                 
             </div>
@@ -72,7 +71,7 @@
     </div>
 </div>
 <AirportsList />
-<FiltersList />
+
 
 @functions
 {
@@ -80,5 +79,5 @@
 
     private SearchCriteria criteria = new SearchCriteria("LHR", "SEA");
 
-    private Filter selectedFilter = new Filter("CMP", "Company");
+  //  private Filter selectedFilter = new Filter("CMP", "Company");
 }
