--- a/FlightFinder.Client/Main.cshtml
+++ b/FlightFinder.Client/Main.cshtml
@@ -1,9 +1,9 @@
 ﻿@inject AppState state
 
 
- <input list="filters" placeholder="..." @bind(filterTobeAdded) />
+ <input list="filters" placeholder="..." @bind(selectedFilter) />
                     <br />
-                  <span>@filterTobeAdded?.DisplayName</span>
+                  <span>@selectedFilter?.DisplayName</span>
                
 <FiltersList />
 
