--- a/FlightFinder.Client/wwwroot/css/site.css
+++ b/FlightFinder.Client/wwwroot/css/site.css
@@ -58,7 +58,7 @@ body {
       font-style: normal;
       font-family: Arial, Helvetica, sans-serif;
       color: #eee; }
-  .form-control input {
+  .form-control input, .form-control select {
     border: 0;
     flex: auto;
     width: 0;
@@ -66,7 +66,7 @@ body {
     background: none;
     font-weight: 600;
     color: white; }
-    .form-control input:focus {
+    .form-control input:focus, .form-control select:focus {
       outline: none; }
 
 .row {
@@ -89,7 +89,8 @@ body {
   background-size: 400% 400%;
   -webkit-animation: Gradient 15s ease infinite;
   -moz-animation: Gradient 15s ease infinite;
-  animation: Gradient 15s ease infinite; }
+  animation: Gradient 15s ease infinite;
+  padding-top: 10px; }
   #search-area select {
     background-color: rgba(0, 0, 0, 0.15);
     border: none;
