--- a/FlightFinder.Client/Components/FilterList.cshtml
+++ b/FlightFinder.Client/Components/FilterList.cshtml
@@ -1,24 +1,31 @@
 ﻿@inject HttpClient Http
 
 <select>
-@foreach (var item in filterList)
+    @foreach (var item in filterList)
     {
-<option value=@item.Key>@item.Value</option>
+    <option value=@item.Key>@item.Value</option>
     }
 </select>
 
 @functions
 {
     private Dictionary<int, string> filterList;
-    public string filterType {get; set;}
+
+    public FilterType filterType {get; set;}
+     
+
+    private void PopulateList(){
+     filterList = new Dictionary<int, string>(){
+                {0,$"{filterType.ToDisplayString()} Item 1"},
+                {1,$"{filterType.ToDisplayString()} Item 2"},
+                {2,$"{filterType.ToDisplayString()} Item 3"},
+                {3,$"{filterType.ToDisplayString()} Item 4"}
+            };
+}
+
 
     protected override async Task OnInitAsync()
     {
-        filterList = new Dictionary<int, string>(){
-            {0,$"{filterType} Item 1"},
-            {1,$"{filterType} Item 2"},
-            {2,$"{filterType} Item 3"},
-            {3,$"{filterType} Item 4"}
-        };
+PopulateList();
     }
 }
