--- a/FlightFinder.Client/Components/Search.cshtml
+++ b/FlightFinder.Client/Components/Search.cshtml
@@ -16,11 +16,8 @@
                         <option value=@FilterType.Sector>Sector</option>
                         <option value=@FilterType.Rating>Rating</option>
                         <option value=@FilterType.Type>Fund Type</option>
-                    </select>
-                    <!--need to change second drop down based on type selected-->
-                  
-                        <FilterList filterType=@state.FilterTypeSelected.ToDisplayString() />
-                   
+                    </select>               
+                    <FilterList filterType=@state.FilterTypeSelected />                  
                 </div>
             </div>
         </div>
