--- a/FlightFinder.Client/Components/FilterList.cshtml
+++ b/FlightFinder.Client/Components/FilterList.cshtml
@@ -1,6 +1,6 @@
 ﻿@inject HttpClient Http
 
-<select>
+<select  class="form-control">
     @foreach (var item in filterList)
     {
     <option value=@item.Key>@item.Value</option>
