--- a/FlightFinder.Client/wwwroot/css/site.css
+++ b/FlightFinder.Client/wwwroot/css/site.css
@@ -95,7 +95,8 @@ body {
     background-color: rgba(0, 0, 0, 0.15);
     border: none;
     color: white;
-    font-weight: 600; }
+    font-weight: 600;
+    width: 200px; }
   #search-area .form-control {
     border: none;
     padding-bottom: .25rem;
