--- a/FlightFinder.Client/wwwroot/css/site.css
+++ b/FlightFinder.Client/wwwroot/css/site.css
@@ -96,7 +96,14 @@ body {
     border: none;
     color: white;
     font-weight: 600;
-    width: 200px; }
+    width: 100%; }
+  #search-area .small-pad {
+    padding-left: 5px;
+    padding-right: 5px; }
+  #search-area .small-pad-top {
+    padding-top: 5px; }
+  #search-area .filter-builder-label {
+    font-weight: 600; }
   #search-area .form-control {
     border: none;
     padding-bottom: .25rem;
