--- a/FlightFinder.Client/wwwroot/css/site.scss
+++ b/FlightFinder.Client/wwwroot/css/site.scss
@@ -129,15 +129,27 @@ body {
     -webkit-animation: Gradient 15s ease infinite;
     -moz-animation: Gradient 15s ease infinite;
     animation: Gradient 15s ease infinite;
-
     padding-top: 10px;
+
     select {
         background-color: rgba(0, 0, 0, 0.15);
         border: none;
         color: white;
         font-weight: 600;
-        width:200px;
+        width: 100%;
+    }
 
+    .small-pad {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .small-pad-top {
+        padding-top: 5px
+    }
+
+    .filter-builder-label {
+        font-weight: 600;
     }
 
     .form-control {
