--- a/FlightFinder.Client/wwwroot/site.css
+++ b/FlightFinder.Client/wwwroot/site.css
@@ -1,11 +1,4 @@
-﻿/*
-    The SCSS structure here is not well organised. There's a lot of unnecessary repetition,
-    and no use of variables to factor out common or easily-changeable values.
-    
-    If you're a SCSS expert, please consider submitting a PR to show how well-organised SCSS
-    should look. Ideally it should be as predictable and industry-standard as possible.
-*/
-@-webkit-keyframes Gradient {
+﻿@-webkit-keyframes Gradient {
   0% {
     background-position: 0% 50%; }
   50% {
@@ -34,30 +27,21 @@ html {
 
 body {
   height: 100%;
-  display: flex; }
+  /*display: flex;*/ }
 
-#search-and-results-area {
-  display: flex;
-  flex: auto;
-  flex-direction: column; }
-
-.arrow {
-  flex-grow: 0;
-  font-size: 20px;
-  color: white; }
-
+/*#search-and-results-area {
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+}*/
 .form-control {
   white-space: nowrap; }
   .form-control:focus-within {
     border-color: #2784ff; }
-  .form-control div {
-    color: #c4c4c4;
-    flex: initial;
-    width: 75px; }
-    .form-control div i {
-      font-style: normal;
-      font-family: Arial, Helvetica, sans-serif;
-      color: #eee; }
+  .form-control div i {
+    font-style: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #eee; }
   .form-control input, .form-control select {
     border: 0;
     flex: auto;
@@ -68,9 +52,6 @@ body {
     color: white; }
     .form-control input:focus, .form-control select:focus {
       outline: none; }
-
-.row {
-  flex-wrap: nowrap !important; }
 
 .greyout {
   position: absolute;
@@ -84,13 +65,15 @@ body {
     z-index: 1; }
 
 #search-area {
-  flex: initial;
   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
   background-size: 400% 400%;
   -webkit-animation: Gradient 15s ease infinite;
   -moz-animation: Gradient 15s ease infinite;
   animation: Gradient 15s ease infinite;
   padding-top: 10px; }
+  #search-area .row {
+    margin: 0;
+    padding: 10px; }
   #search-area select {
     background-color: rgba(0, 0, 0, 0.15);
     border: none;
@@ -103,7 +86,9 @@ body {
   #search-area .small-pad-top {
     padding-top: 5px; }
   #search-area .filter-builder-label {
-    font-weight: 600; }
+    font-weight: 600;
+    padding-top: 7px;
+    font-size: 1.1em; }
   #search-area .form-control {
     border: none;
     padding-bottom: .25rem;
