--- a/FlightFinder.Client/Main.cshtml
+++ b/FlightFinder.Client/Main.cshtml
@@ -1,24 +1,29 @@
 ﻿@inject AppState state
 
 
+<div class="container">
+
+   
 
 
-<div id="search-and-results-area">
-    <div id="search-area" class="">
-        <Search OnSearch=state.Search />
-    </div>
-    <div id="results-area">
-        <GreyOutZone IsGreyedOut=state.SearchInProgress>
-            <SearchResults Itineraries=state.SearchResults
-                           OnAddItinerary=state.AddToShortlist />
-        </GreyOutZone>
-    </div>
+            <div id="search-and-results-area">
+                <div id="search-area" class="">
+                    
+                    <Search OnSearch=state.Search />
+                </div>
+                <div id="results-area">
+                    <GreyOutZone IsGreyedOut=state.SearchInProgress>
+                        <SearchResults Itineraries=state.SearchResults
+                                       OnAddItinerary=state.AddToShortlist />
+                    </GreyOutZone>
+                </div>
+            </div>
+      
+    @*<div id="selections-area" class="p-3 pl-4">
+            <Shortlist Itineraries=state.Shortlist
+                       OnRemoveItinerary=state.RemoveFromShortlist />
+        </div>*@
 </div>
-@*<div id="selections-area" class="p-3 pl-4">
-        <Shortlist Itineraries=state.Shortlist
-                   OnRemoveItinerary=state.RemoveFromShortlist />
-    </div>*@
-<FiltersList />
 @functions
 {
     protected override void OnInit()
