--- a/FlightFinder.Client/Main.cshtml
+++ b/FlightFinder.Client/Main.cshtml
@@ -9,7 +9,7 @@
             <div id="search-and-results-area">
                 <div id="search-area" class="">
                     
-                    <Search OnSearch=state.Search />
+                    <Search OnSearch=state.Search OnAdd=state.Add/>
                 </div>
                 <div id="results-area">
                     <GreyOutZone IsGreyedOut=state.SearchInProgress>
