--- a/FlightFinder.Client/Components/Search.cshtml
+++ b/FlightFinder.Client/Components/Search.cshtml
@@ -24,7 +24,7 @@
     </div>
 </div>
     
-
+<nexttest Name=@state.FilterTypeSelected.ToDisplayString() />
 
 <div class="row">
     <div class="col col-md-10 offset-md-1 pt-3">
