--- a/FlightFinder.Client/_ViewImports.cshtml
+++ b/FlightFinder.Client/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Net.Http
+@using System.Linq
 @using  System.Collections.Generic
 @using Microsoft.AspNetCore.Blazor
 @using FlightFinder.Client.Services
