--- a/FlightFinder.Client/Components/Search.cshtml
+++ b/FlightFinder.Client/Components/Search.cshtml
@@ -18,7 +18,7 @@
         <FilterList filterType=@state.FilterTypeSelected />
     </div>
     <div class="col col-md-2 ">
-        <button  type="button" class="btn btn-success px-5">
+        <button @onclick(() =>  OnAdd(state.FilterItemSelected)) type="button" class="btn btn-success px-5">
             <span class="glyphicon glyphicon-plus"> </span> Add
         </button>
     </div>
@@ -27,16 +27,21 @@
 
 <div class="row">
     <div class="col col-md-10 offset-md-1 pt-3">
-        <div class="alert alert-warning fade in alert-dismissible">
-            <a href="#" @onclick(() => OnSearch(criteria)) class="close" data-dismiss="alert" aria-label="Remove Filter" title="Remove Filter">×</a>
-            <strong>Success!</strong> Indicates a successful or positive action.
-        </div>
+
+        @foreach (KeyValuePair<FilterType, List<string>> entry in state.SelectedFilters)
+        {
+
+            <div class="alert alert-warning fade in alert-dismissible">
+                <a href="#" @onclick(() => OnAdd(state.FilterItemSelected)) class="close" data-dismiss="alert" aria-label="Remove Filter" title="Remove Filter">×</a>
+                <strong>@entry.Key.ToDisplayString()</strong> @string.Join(",", @entry.Value)
+            </div>
+        }
+
     </div>
     <div class="col col-md-1">
         remove
     </div>
 </div>
-
 
 
 <!-- Class / search -->
@@ -49,13 +54,11 @@
     </div>
 </div>
 
-
-
 @functions
 {
     public Func<SearchCriteria, Task> OnSearch { get; set; }
 
-    public Func<int, Task> OnAdd { get; set; }
+    public Func<string, Task> OnAdd { get; set; }
 
     private SearchCriteria criteria = new SearchCriteria("LHR", "SEA");
 
