--- a/FlightFinder.Client/Components/Search.cshtml
+++ b/FlightFinder.Client/Components/Search.cshtml
@@ -44,7 +44,7 @@
 <div class="row ">
 
     <div class="col col-md-2 offset-md-10">
-        <button @onclick(() => OnSearch(criteria)) type="button" class="btn btn-success px-5">
+        <button @onclick(() => OnSearch()) type="button" class="btn btn-success px-5">
             <span class="glyphicon glyphicon-search"> </span> Search
         </button>
     </div>
@@ -60,7 +60,7 @@
 </div>*@
 @functions
 {
-    public Func<SearchCriteria, Task> OnSearch { get; set; }
+    public Func<Task> OnSearch { get; set; }
 
     public Func<string, Task> OnAdd { get; set; }
 
